# gomoku_ai

./: .gitignore  CMakeLists.txt  README.md
include/: igomoku.h
src/: gdefs.h  ggrid.h  gint.h  gline.h  gomoku.cpp  gomoku.h  gplayer.h  gpoint.h  grandom.cpp  grandom.h  gstack.h  gtimer.h  gtree.h
testsrc/: gtest.cpp
